modernize team group js code
avoid reloading page with delete actions
use data-dismiss='modal'

--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -87,8 +87,8 @@
                 </div>
               {% endfor %}
               <div class='mt-2'>
-                <button type='button' data-action='cancel-event-with-message' data-id='' class='btn btn-danger cancelEventBtn'>{{ 'Send message and cancel'|trans }}</button>
-                <button type='button' data-action='cancel-event' data-id='' class='btn btn-danger cancelEventBtn'>{{ 'Cancel'|trans }}</button>
+                <button type='button' data-action='cancel-event-with-message' data-dismiss='modal' data-id='' class='btn btn-danger cancelEventBtn'>{{ 'Send message and cancel'|trans }}</button>
+                <button type='button' data-action='cancel-event' data-dismiss='modal' data-id='' class='btn btn-danger cancelEventBtn'>{{ 'Cancel'|trans }}</button>
             </div>
           </div>
         {% endif %}
