request action changes

--- a/src/templates/view-edit.html
+++ b/src/templates/view-edit.html
@@ -24,7 +24,11 @@
         <div class='d-flex'>
           <i class='fas fa-person-circle-exclamation color-blue mr-2'></i>
           <div>
-            {{ action.action }} has been requested by {{ action.requester_fullname }} for {{ action.target_fullname }}<span title='{{ action.created_at }}' class='relative-moment text-nowrap smallgray ml-2'></span>
+            {{- '%s has been requested by %s for %s'|trans|format(
+              action.action,
+              action.requester_fullname,
+              action.target_fullname
+            ) }}<span title='{{ action.created_at }}' class='relative-moment text-nowrap smallgray ml-2'></span>
               <div class='mt-2'>
             {% if action.target_userid == App.Users.userData.userid %}
                 <button type='button' class='btn btn-primary btn-sm mr-2' data-action='do-requestable-action' data-target='{{ action.action }}'>{{ action.action }}</button>
