exclusive edit mode for all entities

--- a/src/templates/view-edit-toolbar.html
+++ b/src/templates/view-edit-toolbar.html
@@ -257,6 +257,7 @@
       </button>
     {% endif %}
 
+    {# EXCLUSIVE EDIT MODE #}
     {% if mode == 'edit' %}
       {% set lockIcon = 'fa-lock-open' %}
       {% set alt = 'Enable/Disable exclusive edit mode'|trans %}
