--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -62,6 +62,28 @@
       <i class='fas {{ lockIcon }} fa-fw'></i>
     </button>
 
+    {# EXCLUSIVE EDIT MODE #}
+    {% if mode == 'edit' %}
+      {% set lockIcon = 'fa-lock-open' %}
+      {% set alt = 'Enable/Disable exclusive edit mode'|trans %}
+      {% if Entity.ExclusiveEditMode.isActive %}
+          {% set lockIcon = 'fa-lock' %}
+      {% endif %}
+      <button
+        aria-label='{{ alt }}'
+        class='btn {{ Entity.ExclusiveEditMode.isActive ? 'bgnd-gray' : 'hl-hover-gray' }} p-2 mr-2 lh-normal border-0'
+        data-action='toggle-exclusive-edit-mode'
+        id='exclusiveEditModeBtn'
+        title='{{ alt }}'
+        type='button'
+      >
+        <span class='fa-stack'>
+          <i class='fas {{ lockIcon }} fa-stack-1x fa-fw'></i>
+          <i class='fas fa-pen-nib fa-stack-1x fa-fw fa-rotate-by'></i>
+        </span>
+      </button>
+    {% endif %}
+
     <div class='vertical-separator'></div>
 
     {# MORE OPTIONS #}
