--- a/src/templates/show-view-edit.html
+++ b/src/templates/show-view-edit.html
@@ -11,7 +11,7 @@
         </button>
       </div>
       <div class='modal-body'>
-        <p>{{ 'You can import data from a .eln archive, a .zip archive (created by eLabFTW) or a .csv file. %sSee documentation %s%s.'|trans|format("<a href='https://doc.elabftw.net/user-guide.html#importing-data' target='_blank' class='external-link' rel='noopener'>", "", '</a>')|raw }}</p>
+        <p>{{ 'You can import data from a .eln archive or a .csv file. %sSee documentation %s%s.'|trans|format("<a href='https://doc.elabftw.net/user-guide.html#importing-data' target='_blank' class='external-link' rel='noopener'>", "", '</a>')|raw }}</p>
         <form class='form-group' enctype='multipart/form-data' action='app/controllers/ImportController.php' method='post' aria-label='{{ 'Import file'|trans }}'>
           {{ App.Session.get('csrf')|csrf }}
           <label for='import_modal_target'>{{ '1. Select where to import:'|trans }}</label>
@@ -46,9 +46,9 @@
           </select>
 
           <label class='d-block' for='import_modal_file_input'>{{ '3. Select a file to import:'|trans }}</label>
-          <input id='import_modal_file_input' required name='file' type='file' accept='.eln,.zip,.csv' />
+          <input id='import_modal_file_input' required name='file' type='file' accept='.eln,.csv' />
           <input name='type' type='hidden' value='archive' />
-          <p class='smallgray'>{{ 'Allowed extensions: .eln, .zip, .csv'|trans }}<br>
+          <p class='smallgray'>{{ 'Allowed extensions: .eln, .csv'|trans }}<br>
           {{ 'Maximum size: %s'|format(maxUploadSizeRaw)|trans }}</p>
 
           <div class='mt-4 text-center'>
